Fixed bug in z-index

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ body {
 .info {
     width: 50%;
     background-color: #fff;
-    z-index: -1;
+    z-index: 1;
     padding: 35px 40px;
     box-shadow: -15px 0 35px rgba(0, 0, 0, .1),
                 0 -15px 35px rgba(0, 0, 0, .1),
